--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@types/bcryptjs": "^2.4.4",
     "@types/express": "^4.17.17",
     "@types/morgan": "^1.9.5",
+    "@types/uuid": "^9.0.4",
     "eslint-config-standard-with-typescript": "^39.0.0",
     "nodemon": "^3.0.1",
     "ts-node": "^10.9.1",
@@ -29,6 +30,7 @@
     "express": "^4.18.2",
     "express-async-handler": "^1.2.0",
     "mongoose": "^7.5.2",
-    "morgan": "^1.10.0"
+    "morgan": "^1.10.0",
+    "uuid": "^9.0.1"
   }
 }
